# multi-mouse-tool

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  build.rs  resource.rc
docs/: index.html
src/: config.rs  device.rs  main.rs  mouse_config.rs
src/app/: events.rs  layout.rs  mod.rs  ui.rs
