[package]
name = "multi-mouse-tool"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.5"

[dependencies]
native-windows-gui = "1.0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]
